tests/chapter_17/invalid_parse/sizeof_type_no_parens.c
int main(void) { return sizeof int; }